<resources>
    <string name="app_name">阿拉租车</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- 侧滑 -->
    <string name="drawer_menu_rental_order">出租订单</string>
    <string name="drawer_menu_my_vehicle">我的车辆</string>
    <string name="drawer_menu_tenant_order">租客订单</string>
    <string name="drawer_menu_common_tenant">常用租客</string>
    <string name="drawer_menu_my_collection">我的收藏</string>
    <string name="drawer_menu_my_purse">我的钱包</string>
    <string name="drawer_menu_discount_coupon">优惠券</string>
    <string name="drawer_menu_setting">设置</string>
    <string name="drawer_menu_login">登录</string>

    <!-- 内容 -->
    <string name="text_agreement">未注册阿拉租车的手机号码,获取验证码登录时自动注册，且代表您已同意</string>
    <string name="text_agreement_1">阿拉租车会员协议</string>
    <string name="text_hotline">如需帮助可拨打阿拉租车免费热线电话:</string>
    <string name="text_hotline_1">4001-021-021</string>
    <string name="text_more_city">*更多城市陆续开通中,敬请期待!</string>
    <string name="text_code">请输入您验证码</string>
    <string name="text_phone">请输入手机号</string>
    <string name="count">00 s</string>
    <string name="server_internal_error">服务器异常</string>
    <string name="cannot_connected_server">网络连接失败</string>



    <!-- 日期 -->
    <string name="picker_sure">确定</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_title">选择时间</string>
    <string name="picker_year">年</string>
    <string name="picker_month">月</string>
    <string name="picker_day">日</string>
    <string name="picker_hour">时</string>
    <string name="picker_minute">分</string>
</resources>
