<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_background"
              android:orientation="vertical">

    <include layout="@layout/header_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/color_ffffff"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@null"
            android:hint="@string/text_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:textColor="@color/main_title_wrod_color"
            android:textColorHint="@color/hui_wrod_color1"
            android:textSize="15dp">
        </EditText>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_ffffff"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:background="@null"
            android:hint="@string/text_code"
            android:inputType="phone"
            android:maxLength="6"
            android:paddingLeft="10dp"
            android:textColor="@color/main_title_wrod_color"
            android:textColorHint="@color/hui_wrod_color1"
            android:textSize="15dp">
        </EditText>

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="4"
            android:background="@drawable/ripple_bg"
            android:text="获取验证码"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ripple_bg"
        android:text="登录"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/layout_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:maxLines="2"
            android:text="@string/text_agreement"
            android:textColor="@color/hui_wrod_color1"
            android:textSize="@dimen/font_size_14"/>

        <TextView
            android:id="@+id/tv_agreement_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:maxLines="2"
            android:text="@string/text_agreement_1"
            android:textColor="@color/hui_wrod_color1"
            android:textSize="@dimen/font_size_14"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_hotline"
            android:textColor="@color/hui_wrod_color1"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/text_hotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/text_hotline_1"
            android:textColor="@color/color_48b54c"
            android:textSize="12dp"/>
    </LinearLayout>

</LinearLayout>